--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">DeviceID</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="imei">IMEI: </string>
+    <string name="imsi">IMSI: </string>
+    <string name="model">Model: </string>
 </resources>
