--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">DeviceID</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="imei">IMEI (Device): </string>
     <string name="imsi">IMSI (SIM): </string>
     <string name="model">Model: </string>
+    <string name="region">Region: </string>
 </resources>
