--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">DeviceID</string>
     <string name="action_settings">Settings</string>
+    <string name="reset">Reset</string>
     <string name="imei">IMEI (Device): </string>
     <string name="imsi">IMSI (SIM): </string>
     <string name="model">Model: </string>
